added feature: abstract abuscadorlivros --> parserGson